--- a/p2/index.html
+++ b/p2/index.html
@@ -6,9 +6,9 @@
     <title></title>
     <link rel="stylesheet" href="https://code.jquery.com/jquery-2.2.1.min.js">
     <script src="main.js">
+    </script>
 </head>
 <body>
-    <p id="#p1"> Hola </p> 
+    <p id="p1"> Hola </p> 
+    <button>Reemplaza el elemnto por el nuevo texto</button>
 </body>
-</html>
-$(".p1").html("Nuevo parrafo")
